<resources>
    <string name="app_name">GameScoreApp-Metelov</string>
    <string name="button_exit_app_value">X</string>
    <string name="button_list_of_winners_value">List of winners</string>
    <string name="button_start_game_value">Start the Game</string>
    <string name="label_timer_input">Timer</string>
    <string name="tv_set_timer_heading_text">SET NEW GAME\'s TIMER</string>
    <string name="et_hours_hint">Hours</string>
    <string name="et_hours_value">0</string>
    <string name="et_minutes_hint">Min</string>
    <string name="et_minutes_value">00</string>
    <string name="et_seconds_hint">Sec</string>
    <string name="et_seconds_value">15</string>
    <string name="tv_set_team_s_names_head_text">SET TEAM\'s NAMES</string>
    <string name="et_first_team_s_name_hint">First team\'s name</string>
    <string name="et_second_team_s_name_hint">Second team\'s name</string>
    <string name="button_cancel_the_game_text">Cancel the game</string>
    <string name="tv_set_timer_value">0</string>
    <string name="tv_name_of_the_first_team">THE NAME OF THE FIRST TEAM!</string>
    <string name="tv_score_of_the_team_1">0</string>
    <string name="tv_divider">---:---</string>
    <string name="tv_score_of_the_team_2">0</string>
    <string name="tv_name_of_the_second_team">THE NAME OF THE SECOND TEAM!</string>
    <string name="btn_scores1_text">HOSTS \n SCORES!</string>
    <string name="btn_scores2_text">GUESTS \n SCORES!</string>
    <string name="tv_won">WON</string>
    <string name="default_winner_name">Default winner name</string>
    <string name="no_data_available">No winners yet</string>
    <string name="gameWinnerResultsToShare"> \"%s\" against \"%s\" game ended with \"%s\" victory with a score %s \- %s</string>
    <string name="gameDrawResultsToShare"> \"%s\" against \"%s\" game ended in a draw with a score %s \- %s</string>
    <string name="final_score">Score: %d</string>
    <string name="draw_header">There are no winners</string>
    <string name="draw_body">DRAW</string>
    <string name="timer_ended">Completed</string>
    <string name="time_on_timer">TIME :  "%02d":"%02d":"%02d"</string>
    <string name="score_of_the_team_1">%d</string>
    <string name="score_of_the_team_2">%d</string>
    <string name="button_clear_winners_list">Clear winners list</string>
    <string name="button_close_winners_list">Close winners list</string>
    <string name="button_back">back</string>
    <string name="button_home">home</string>
</resources>