<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnCancel_layout_margin"
        android:background="@drawable/button_style_no"
        android:padding="@dimen/btnCancel_padding"
        android:text="@string/button_cancel_the_game_text"
        android:textColor="@color/white"
        android:textSize="@dimen/btnCancel_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/timer_layout_marginTop"
        android:text="@string/tv_set_timer_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/tvNameOfTeam1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCancel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNameOfTeam1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvNameOfTeam1_layout_marginTop2"
        android:text="@string/tv_name_of_the_first_team"
        android:textAlignment="center"
        android:textColor="@color/scores_team_1_button"
        android:textSize="@dimen/tvNameOfTeam1_textSize2"
        app:layout_constraintBottom_toTopOf="@id/tvScoreOfTeam1"
        app:layout_constraintTop_toBottomOf="@id/timer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScoreOfTeam1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_score_of_the_team_1"
        android:textAlignment="center"
        android:textColor="@color/scores_team_1_button"
        android:textSize="@dimen/tvScoreOfTeam1_textSize2"
        app:layout_constraintBottom_toTopOf="@id/tvDivider"
        app:layout_constraintTop_toBottomOf="@id/tvNameOfTeam1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_divider"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/tvDivider_textSize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScoreOfTeam2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_score_of_the_team_2"
        android:textAlignment="center"
        android:textColor="@color/scores_team_2_button"
        android:textSize="@dimen/tvScoreOfTeam2_textSize2"
        app:layout_constraintBottom_toTopOf="@id/tvNameOfTeam2"
        app:layout_constraintTop_toBottomOf="@id/tvDivider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNameOfTeam2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_name_of_the_second_team"
        android:textAlignment="center"
        android:textColor="@color/scores_team_2_button"
        android:textSize="@dimen/tvNameOfTeam2_textSize2"
        app:layout_constraintBottom_toTopOf="@id/btnScores1"
        app:layout_constraintTop_toBottomOf="@id/tvScoreOfTeam2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnScores1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnScores1_layout_margin"
        android:background="@drawable/button_style_team1"
        android:padding="@dimen/btnScores1_padding"
        android:text="@string/btn_scores1_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/btnScores1_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnScores2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameOfTeam2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnScores2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnScores2_layout_margin"
        android:background="@drawable/button_style_team2"
        android:padding="@dimen/btnScores2_padding"
        android:text="@string/btn_scores2_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/btnScores2_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnScores1"
        app:layout_constraintTop_toBottomOf="@id/tvNameOfTeam2" />


</androidx.constraintlayout.widget.ConstraintLayout>