<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartEnter2TeamsActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExitApp"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/exit_button"
        android:text="@string/button_exit_app_value"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/btnListOfWinners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListOfWinners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/purple_500"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/button_list_of_winners_value"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setTimerHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_set_timer_heading_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/hours"
        app:layout_constraintTop_toBottomOf="@id/btnExitApp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hours"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="1"
        app:layout_constraintBottom_toTopOf="@id/glnCenter"
        app:layout_constraintEnd_toStartOf="@id/minutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnListOfWinners">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:hint="Hours"
            android:inputType="numberDecimal"
            android:maxLength="1"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minutes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="2"
        app:layout_constraintBottom_toTopOf="@id/glnCenter"
        app:layout_constraintEnd_toStartOf="@id/seconds"
        app:layout_constraintStart_toEndOf="@id/hours"
        app:layout_constraintTop_toBottomOf="@id/btnListOfWinners">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:hint="Minutes"
            android:inputType="numberDecimal"
            android:maxLength="2"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/seconds"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="2"
        app:layout_constraintBottom_toTopOf="@id/glnCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/minutes"
        app:layout_constraintTop_toBottomOf="@id/btnListOfWinners">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:hint="Seconds"
            android:inputType="numberDecimal"
            android:maxLength="2"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glnCenter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/setTeamsNamesId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SET TEAM's NAMES"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/teams1name"
        app:layout_constraintTop_toBottomOf="@id/glnCenter" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teams1name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintBottom_toTopOf="@id/teams2name"
        app:layout_constraintTop_toBottomOf="@id/setTeamsNamesId">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:hint="First team's name"
            android:inputType="text"
            android:maxLength="20"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teams2name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintTop_toBottomOf="@id/teams1name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:hint="Second team's name"
            android:inputType="text"
            android:maxLength="20"

            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@color/purple_500"
        android:text="@string/button_start_game_value"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teams2name" />

</androidx.constraintlayout.widget.ConstraintLayout>